# ridit

./: .gitignore  Cargo.toml  LICENSE  README.MD
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/config/: default.rs  mod.rs  model.rs  sort.rs  thread.rs
src/app/reddit/: agent.rs  client.rs  mod.rs  repository.rs  repository_sync.rs
src/app/reddit/domain/: mod.rs
src/app/reddit/models/: listing.rs  meta.rs  mod.rs
src/app/reddit/repository/: mod.rs
src/app/service/: download.rs  download_sync.rs  mod.rs
