[package]
authors = ["Tigor Hutasuhut <tigor.hutasuhut@gmail.com>"]
categories = ["cli"]
description = "Reddit Image Downloader CLI"
edition = "2018"
keywords = ["reddit", "image", "downloader"]
license = "MIT"
name = "ridit"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
reqwest = {version = "0.11.3", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
tokio = {version = "1.6.0", features = ["full"]}
toml = "0.5.8"
