[package]
authors = ["Tigor Hutasuhut <tigor.hutasuhut@gmail.com>"]
categories = ["cli"]
description = "Reddit Image Downloader CLI"
edition = "2018"
keywords = ["reddit", "image", "downloader"]
license = "MIT"
name = "ridit"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fs = "1.5.0"
futures-lite = "1.11.3"
home = "0.5.3"
path-absolutize = "3.0.10"
reqwest = {version = "0.11.3", features = ["json", "stream"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
symlink = "0.1.0"
tokio = {version = "1.6.0", features = ["full"]}
tokio-retry = "0.3.0"
toml = "0.5.8"
