[package]
authors = ["Tigor Hutasuhut <tigor.hutasuhut@gmail.com>"]
categories = ["cli"]
description = "Reddit Image Downloader CLI"
edition = "2018"
keywords = ["reddit", "image", "downloader"]
license = "MIT"
name = "ridit"
version = "0.1.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-fs = "1.5.0"
futures-lite = "1.11.3"
home = "0.5.3"
path-absolutize = "3.0.10"
rayon = "1.5.1"
retry = "1.2.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
symlink = "0.1.0"
toml = "0.5.8"
ureq = {version = "2.1.1", features = ["json"]}
